[package]
name = "okamoto"
description = "Okamoto (2006) Blind Signatures"
homepage = "https://github.com/saltatory/okamoto"
repository = "https://github.com/saltatory/okamoto"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey Hohenstein <jeffrey.hohenstein@gmail.com>"]
license = "BUSL-1.1"

[dependencies]
bls12_381 = {workspace = true, features = ["default"], optional = true }
ff = {workspace = true}
rand = {workspace = true}

[features]
default = ["bls12_381_plain"]
bls12_381_plain = ["bls12_381"]
bls12_381_crs = ["bls12_381"]

# Add rendering of LaTeX math symbols in documentation
#
# Example: to generate docs locally
#
# RUSTDOCFLAGS="--html-in-header $(pwd)/katex-header.html"
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"
simple_logger = "5.0.0"
