[package]
name = "okamoto"
description = "Okamoto (2006) Blind Signatures"
homepage = "https://github.com/saltatory/okamoto"
repository = "https://github.com/saltatory/okamoto"
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[dependencies]
bls12_381 = {workspace = true, features = ["default"], optional = true }
ff = {workspace = true}
rand = {workspace = true}

[features]
default = ["bls12_381_plain"]
bls12_381_plain = ["bls12_381"]
bls12_381_crs = ["bls12_381"]

# Add rendering of LaTeX math symbols in documentation
#
# Example: to generate docs locally
#
# RUSTDOCFLAGS="--html-in-header $(pwd)/katex-header.html"
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion.workspace = true
simple_logger.workspace = true
