[package]
name = "ziglet-okamoto"
description = "Okamoto (2008) Blind Signatures"
homepage = "https://github.com/ziglet-io/okamoto"
repository = "https://github.com/ziglet-io/okamoto"
readme = "README.md"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey Hohenstein <jeffrey.hohenstein@gmail.com>"]
license = "MIT"

[dependencies]
bls12_381 = { version = "0.8.0", features = ["default"], optional = true }
ff = {version = "0.13.0"}
rand_core = { version = "0.6.4", features = ["getrandom"] }

[features]
default = ["bls12_381_plain"]
bls12_381_plain = ["bls12_381"]
bls12_381_crs = ["bls12_381"]

# Add rendering of LaTeX math symbols in documentation
#
# Example: to generate docs locally
#
# RUSTDOCFLAGS="--html-in-header $(pwd)/katex-header.html"
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = {version = "0.5.1", features = ["async_tokio", "async"]}
simple_logger = {version = "5.0.0"}
